@@ -16,6 +16,9 @@ CC field.
 * Fixed bug were adding an attachment failed because of null content
 type.
 
+* Fixed bug that prevented forgot.aspx from being used unless
+register.aspx was also being used.
+
 * WhatsNew - doesn't obey permissions
 
 make sure new files are added to CVS, zip
